examples/negative/mutable/param_ref_write_no_row.kai
# Negative fixture (Mutable contract — issue #251 / Ref companion to
# param_array_write_no_row): writing to a `Ref[T]` parameter via
# `Mutable.ref_set(r, v)` is an observable mutation — the caller
# shares the cell, so the mutation is visible after the call. The
# function's row must include `Mutable`; a pure `Int` row must be
# rejected.
#
# Before the fix, the demand pass (`is_mutable_array_write_name`)
# recognised only `array_set` / `array_grow`, so `Mutable.ref_set`
# fell through to the "no demand" branch and `mask_local_mutable_demand`
# stripped `Mutable` from the row unconditionally — the body compiled
# clean and then segfaulted at runtime (the dispatched `ref_set` hit
# a NULL `Mutable` handler that was never installed). The fix makes
# `Mutable.ref_set` a recognised write-demand whose locality is
# checked against the argument: a parameter Ref is never local, so
# `Mutable` stays on the row and this program is rejected here, at
# compile time, instead of crashing.

fn bump(r: Ref[Int]) : Int {
  Mutable.ref_set(r, 42)
  0
}

fn main() : Int / Mutable + Console = {
  let r = Mutable.ref_make(0)
  let _ = bump(r)
  Stdout.print(int_to_string(Mutable.ref_get(r)))
  0
}
